--- a/samples/HelloFragment/res/values/strings.xml
+++ b/samples/HelloFragment/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
     <string name="app_name">HelloFragment</string>
+    <string name="example1">Add 123</string>
+    <string name="example2">Hide 1</string>
+    <string name="example3">Remove 123</string>
+    <string name="dump">Dump</string>
 </resources>
