--- a/samples/HelloSettings/res/values/strings.xml
+++ b/samples/HelloSettings/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="app_name">HelloSettings</string>
-    <string name="help_text">Use the menu to select the Settings for this application#8230;</string>
+    <string name="help_text">Use the menu to select the Settings for this application</string>
     <string name="help">Help</string>
     <string name="settings">Settings</string>
     <string name="show_notification">Show Notification</string>
