Update to ExerciseTags
Fixes and final code for Exercise.

--- a/exercises/ExerciseTags/res/values/strings.xml
+++ b/exercises/ExerciseTags/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <string name="app_name">ExerciseTags</string>
+    <string name="main">Main</string>
+    <string name="test">Test</string>
 
 </resources>
